<resources>
    <string name="app_name">BooksDB</string>
    <string name="menu_favourites">Favourites</string>
    <string name="menu_home">Home</string>
    <string name="menu_profile">Profile</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="menu_bookDetail">Book Detail</string>
    <string name="menu_login">Login</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="hint_name">Name</string>
    <string name="hint_passwordConfirmation">Confirm Password</string>
    <string name="menu_register">Register</string>
</resources>